Fixed FormSuccess component display on mobile

--- a/src/Form.scss
+++ b/src/Form.scss
@@ -86,5 +86,15 @@ form {
             width: 30%;
         }
     }
+    .formSuccess {
+        text-align: center;
+        
+        h2,
+        h3 {
+            font-size: 12px;
+            font-weight: 500;
+            line-height: 0.5;
+        }
+    }
 
 }
